<!--
  ~ Copyright (C) 2015-2017 Level Software LLC.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Carculator</string>
    <string name="content_provider" translatable="false">io.levelsoftware.carculator</string>

    <string name="unimplemented">Unimplemented</string>

    <string name="quote_no_dealer">%1$s %2$s Quote</string>

    <string name="quote_list_best_offer">Best offer %1$s</string>
    <string name="quote_list_pricing">%1$s/month, %2$s due at signing</string>

    <string name="content_description_logo">Logo</string>
    <string name="content_description_vehicle_picture">Vehicle Picture</string>
    <string name="content_description_edmunds">Data Provided by Edmunds.com</string>
    <string name="content_description_settings">Settings</string>
    <string name="content_description_status">Status</string>

    <string name="currency_symbol">$</string>

    <string name="intent_key_status_code" translatable="false">status_code</string>
    <string name="intent_key_status_message" translatable="false">status_message</string>
    <string name="intent_key_search_query" translatable="false">search_query</string>
    <string name="intent_key_quote" translatable="false">quote</string>
    <string name="intent_key_quote_type" translatable="false">quote_type</string>
    <string name="intent_key_quote_vehicle" translatable="false">quote_vehicle</string>

    <string name="quote_type_lease" translatable="false">lease</string>
    <string name="quote_type_loan" translatable="false">loan</string>

    <string name="quote_display_monthly" translatable="false">monthly</string>
    <string name="quote_display_total" translatable="false">total</string>
    <string name="quote_display_signing" translatable="false">signing</string>

    <string-array name="quote_display_modes">
        <item>@string/quote_display_monthly</item>
        <item>@string/quote_display_total</item>
        <item>@string/quote_display_signing</item>
    </string-array>

    <string name="quote_toolbar_monthly">monthly payment</string>
    <string name="quote_toolbar_total">total cost</string>
    <string name="quote_toolbar_signing">due at signing</string>

    <string name="database_tree_quotes" translatable="false">quotes</string>
    <string name="database_tree_users" translatable="false">users</string>
    <string name="database_tree_vehicles" translatable="false">vehicles</string>
    <string name="database_tree_dealers" translatable="false">dealers</string>

    <string name="action_settings">Settings</string>
    <string name="action_compare">Compare Quotes</string>
    <string name="action_search">Search Vehicles</string>
    <string name="action_chart">Chart</string>

    <string name="search_hint">Search Vehicles</string>

    <string name="retry">Retry</string>
    <string name="dismiss">Dismiss</string>

    <string name="error_no_network">No Network</string>
    <string name="error_network_error">Network Error</string>
    <string name="error_data">Data Error</string>
    <string name="error_database">Error Saving Quote</string>

    <string name="tab_loan">Buy</string>
    <string name="tab_lease">Lease</string>
    <string name="tab_quote">Quote</string>
    <string name="tab_dealer">Dealer</string>

    <string-array name="quote_list_tab_names">
        <item>@string/tab_loan</item>
        <item>@string/tab_lease</item>
    </string-array>

    <string-array name="quote_entry_tab_names">
        <item>@string/tab_quote</item>
        <item>@string/tab_dealer</item>
    </string-array>

    <string name="pref_vehicle_last_update" translatable="false">vehicle_last_update</string>
    <string name="job_sync_vehicle" translatable="false">job_vehicle_sync</string>

    <string name="broadcast_sync_vehicle" translatable="false">io.levelsoftware.carculator.sync.VEHICLE_SYNC</string>
    <string name="broadcast_click_vehicle" translatable="false">io.levelsoftware.carculator.ui.CLICK_VEHICLE</string>
    <string name="broadcast_click_quote" translatable="false">io.levelsoftware.carculator.ui.CLICK_QUOTE</string>

    <string name="form_section_pricing">Pricing</string>

    <string name="form_field_negotiated_price">Negotiated Price</string>
    <string name="form_field_residual_value">Residual Value</string>
    <string name="form_field_tax_rate">Tax Rate</string>

    <string name="form_field_money_factor">Money Factor</string>
    <string name="form_field_interest_rate">Interest Rate</string>

    <string name="form_field_lease_term">Lease Term (mo)</string>
    <string name="form_field_loan_term">Loan Term (mo)</string>

    <string name="form_field_dealer_incentives">Incentives</string>
    <string name="form_field_down_payment">Down Payment</string>
    <string name="form_field_trade_in_value">Trade-in Value</string>
    <string name="form_field_trade_in_owed">Trade-in Owed</string>

    <string name="form_section_fees">Fees</string>

    <string name="form_field_title_fee">Title and Registration</string>
    <string name="form_field_doc_fee">Documentation</string>
    <string name="form_field_acquisition_fee">Acquisition</string>
    <string name="form_field_other_fee">Other</string>

    <string name="edmunds_base_media_url" translatable="false">https://media.ed.edmunds-media.com</string>
    <string name="edmunds_media_thumb_suffix" translatable="false">150.jpg</string>
    <string name="edmunds_media_full_suffix" translatable="false">815.jpg</string>

    <string name="leasing_coming_soon">Leasing coming soon!</string>
    <string name="dealer_input_coming_soon">Dealer input coming soon!</string>


    <!-- Widget -->
    <string name="broadcast_updated_data" translatable="false">io.levelsoftware.carculator.widget.ACTION_DATA_UPDATED</string>
    <string name="widget_quote_list_name">Recent Loan Quotes</string>
    <string name="widget_quote_list_empty">No recent quotes</string>
    <string name="widget_pref_recent_quotes" translatable="false">recent_quotes</string>
    <string name="intent_key_widget_launch" translatable="false">widget_launch</string>

</resources>
